Project

General

Profile

Actions

Bug #56920

open

crash: RGWCoroutinesStack::wakeup()

Added by Telemetry Bot over 1 year ago. Updated over 1 year ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Telemetry
Tags:
backport_processed
Backport:
pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):

f367d7934067a0d2b7458f72c11db6e2405378344d86e64d6a4107114f74ec64


Description

http://telemetry.front.sepia.ceph.com:4000/d/jByk5HaMz/crash-spec-x-ray?orgId=1&var-sig_v2=b08f99631b24051dcba0acbd232e76130bd4b73c07d1311003fc661b8bb17728

Sanitized backtrace:

    RGWCoroutinesStack::wakeup()
    RGWDataSyncControlCR::wakeup(int, std::set<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&)
    RGWRemoteDataLog::wakeup(int, std::set<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&)
    RGWRados::wakeup_data_sync_shards(rgw_zone_id const&, std::map<int, std::set<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::less<int>, std::allocator<std::pair<int const, std::set<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > > > > >&)
    RGWOp_DATALog_Notify::execute(optional_yield)
    rgw_process_authenticated(RGWHandler_REST*, RGWOp*&, RGWRequest*, req_state*, optional_yield, bool)
    process_request(rgw::sal::RGWRadosStore*, RGWREST*, RGWRequest*, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, rgw::auth::StrategyRegistry const&, RGWRestfulIO*, OpsLogSink*, optional_yield, rgw::dmclock::Scheduler*, std::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> >*, int*)
    make_fcontext()

Crash dump sample:
{
    "backtrace": [
        "/lib/x86_64-linux-gnu/libc.so.6(+0x43090) [0x7f8b7fe4a090]",
        "(RGWCoroutinesStack::wakeup()+0x4) [0x7f8b8082df84]",
        "(RGWDataSyncControlCR::wakeup(int, std::set<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&)+0x3ba) [0x7f8b80745ffa]",
        "(RGWRemoteDataLog::wakeup(int, std::set<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&)+0x56) [0x7f8b80713276]",
        "(RGWRados::wakeup_data_sync_shards(rgw_zone_id const&, std::map<int, std::set<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::less<int>, std::allocator<std::pair<int const, std::set<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > > > >&)+0xb8) [0x7f8b808df258]",
        "(RGWOp_DATALog_Notify::execute(optional_yield)+0x499) [0x7f8b804aa159]",
        "(rgw_process_authenticated(RGWHandler_REST*, RGWOp*&, RGWRequest*, req_state*, optional_yield, bool)+0x1387) [0x7f8b804813a7]",
        "(process_request(rgw::sal::RGWRadosStore*, RGWREST*, RGWRequest*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, rgw::auth::StrategyRegistry const&, RGWRestfulIO*, OpsLogSink*, optional_yield, rgw::dmclock::Scheduler*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> >*, int*)+0x3885) [0x7f8b804868f5]",
        "/lib/libradosgw.so.2(+0x3f3283) [0x7f8b803ec283]",
        "/lib/libradosgw.so.2(+0x3f4770) [0x7f8b803ed770]",
        "/lib/libradosgw.so.2(+0x3f48ec) [0x7f8b803ed8ec]",
        "make_fcontext()" 
    ],
    "ceph_version": "16.2.9",
    "crash_id": "2022-07-21T08:13:08.919528Z_b044d338-2fd1-4ed8-bd67-e81345e97ad8",
    "entity_name": "client.bea2a95e1f4cbb678ea19dbaf7a98d986e7086e6",
    "os_id": "ubuntu",
    "os_name": "Ubuntu",
    "os_version": "20.04.4 LTS (Focal Fossa)",
    "os_version_id": "20.04",
    "process_name": "radosgw",
    "stack_sig": "f367d7934067a0d2b7458f72c11db6e2405378344d86e64d6a4107114f74ec64",
    "timestamp": "2022-07-21T08:13:08.919528Z",
    "utsname_machine": "x86_64",
    "utsname_release": "5.13.0-51-generic",
    "utsname_sysname": "Linux",
    "utsname_version": "#58~20.04.1-Ubuntu SMP Tue Jun 14 11:29:12 UTC 2022" 
}


Related issues 3 (1 open2 closed)

Is duplicate of rgw - Bug #49302: Huge amount of RGW crashes in the multisite setup with a backtrace Resolved

Actions
Copied to rgw - Backport #57237: quincy: crash: RGWCoroutinesStack::wakeup()In ProgressCory SnyderActions
Copied to rgw - Backport #57238: pacific: crash: RGWCoroutinesStack::wakeup()ResolvedCory SnyderActions
Actions #1

Updated by Telemetry Bot over 1 year ago

  • Crash signature (v1) updated (diff)
  • Crash signature (v2) updated (diff)
  • Affected Versions v16.2.9 added
Actions #2

Updated by Casey Bodley over 1 year ago

  • Is duplicate of Bug #49302: Huge amount of RGW crashes in the multisite setup with a backtrace added
Actions #3

Updated by Casey Bodley over 1 year ago

  • Status changed from New to Duplicate
Actions #4

Updated by Casey Bodley over 1 year ago

  • Status changed from Duplicate to Fix Under Review
  • Backport set to pacific quincy
  • Pull request ID set to 47613
Actions #5

Updated by Casey Bodley over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57237: quincy: crash: RGWCoroutinesStack::wakeup() added
Actions #7

Updated by Backport Bot over 1 year ago

  • Copied to Backport #57238: pacific: crash: RGWCoroutinesStack::wakeup() added
Actions #8

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF