rgw/coroutine: check for null stack on wakeup

Fixes: https://tracker.ceph.com/issues/56920

Signed-off-by: Casey Bodley <cbodley@redhat.com>

Resolves: rhbz#2105324